# AfricaLLM

./: .gitignore  README.md  clean_raw_results.py  data_preprocees.ipynb  data_preprocess.py  finetune.ipynb  llama_finetune.py  main.py  original_data_preprocess.ipynb  pyproject.toml  requirements.txt  result_analysis.py  result_data_process.ipynb  results.ipynb  test.ipynb
Africa_WVS_datasets/Kenya/: kenya_questions_dataset.csv
Africa_WVS_datasets/Libya/: libya_questions_dataset.csv
Africa_WVS_datasets/Nigeria/: nigeria_questions_dataset.csv
Africa_WVS_datasets/WVS_original_dataset/: F00013153-WVS_Wave_7_Nigeria_Csv_v5.0.csv
WVS_original_dataset/: F00013172-WVS_Wave_7_Zimbabwe_Csv_v5.0.csv  WV6_Data_Ghana_Csv_v20221117.1.csv  WV6_Data_Rwanda_Csv_v20221117.1.csv
data/: WVQ.csv  WVQ.jsonl  WVQ6.jsonl  new_WVQ.jsonl  new_WVQ6.jsonl  new_WVQ_test.jsonl
data/Afrikaans/: WVQ_Afrikaans.csv
data/Amharic/: WVQ_Amharic.csv
data/Ethiopia/: Ethiopia.csv
data/Ewe/: WVQ_Ewe.csv
data/Finetune/: WVQ_all.jsonl  WVQ_llama_all.jsonl
data/Hausa/: WVQ_Hausa.csv
data/Igbo/: WVQ_Igbo.csv
data/Kenya/: Kenya.csv
data/Kinyarwanda/: WVQ_Kinyarwanda.csv
data/Libya/: Libya.csv
data/Morroco/: Morroco.csv  morroco_questions_dataset.csv
data/Ndebele/: WVQ_Ndebele.csv
data/Nigeria/: Nigeria.csv
data/Oromo/: WVQ_Oromo.csv
data/Shona/: WVQ_Shona.csv
data/Sotho/: WVQ_Sotho.csv
data/Swahili/: WVQ_Swahili.csv
data/Tigrigna/: WVQ_Tigrigna.csv
data/Tswana/: WVQ_Tswana.csv
data/Tunisia/: Tunisia.csv  tunisia_questions_dataset.csv
data2/: WVQ.jsonl  WVQ6.jsonl
(+101 files in other folders)
