[project]
name = "africallm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.8",
    "datasets>=3.6.0",
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
    "jsonlines>=4.0.0",
    "nltk>=3.9.1",
    "numpy>=2.0.2",
    "openai>=1.93.0",
    "pandas>=2.3.0",
    "pip>=25.1.1",
    "scikit-learn>=1.6.1",
    "torch>=2.7.1",
    "transformers>=4.53.1",
]
